# 2DGameEngine

./: CMakeLists.txt  README.md  Setting up MSYS
shaders/: fragment_shader.txt  vertex_shader.txt
src/: Collision.cpp  Collision.h  Platform.cpp  Platform.h  Shader.cpp  Shader.h  Star.cpp  Star.h  Texture.cpp  Wall.cpp  Wall.h  main  main.cpp
